# langgraph-template

./: .env.example  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependency-review.yml  pr-checks.yml
app/: config.py  graph.py  models.py
src/: __init__.py  graph.py  models.py  state.py
